{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 102,
  "lineage": "1cda5d9a-dd53-5f6d-d9f2-09175dc52bd5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "test_wxm_existing_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:internet-gateway/igw-06d61463409eb8f84",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0ebcdb39f7a526ef9"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0ebcdb39f7a526ef9"
                ]
              }
            ],
            "id": "igw-06d61463409eb8f84",
            "internet_gateway_id": "igw-06d61463409eb8f84",
            "owner_id": "747082607185",
            "region": "eu-west-3",
            "tags": {
              "Name": "boris-gateway"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_wxm_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e207c18bb303cc68",
            "arn": "arn:aws:ec2:eu-west-3:747082607185:instance/i-0fe0183861f0511a8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe0183861f0511a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_wxm-key-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a399be314e13406e"
              }
            ],
            "primary_network_interface_id": "eni-0a399be314e13406e",
            "private_dns": "ip-172-31-50-75.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.50.75",
            "public_dns": "ec2-35-180-24-89.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.24.89",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c17b4fee27258c05",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "test_wxm-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef6d47b39c943029",
            "tags": {
              "Name": "test_wxm-bastion"
            },
            "tags_all": {
              "Name": "test_wxm-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042d0321c7c8b25e3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "747082607185",
            "id": "i-0fe0183861f0511a8",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_key_pair.test_wxm_bastion_key",
            "aws_route_table.test_wxm_public_rt",
            "aws_route_table_association.test_wxm_public_assoc",
            "aws_security_group.test_wxm_sg_bastion",
            "aws_subnet.test_wxm_subnets",
            "data.aws_internet_gateway.test_wxm_existing_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_wxm_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e207c18bb303cc68",
            "arn": "arn:aws:ec2:eu-west-3:747082607185:instance/i-0e536270d9127554b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e536270d9127554b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_wxm-key-web",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-083a4a913d5b06c40"
              }
            ],
            "primary_network_interface_id": "eni-083a4a913d5b06c40",
            "private_dns": "ip-172-31-50-81.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.50.81",
            "public_dns": "ec2-15-237-252-85.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.252.85",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-006a576cf8bfad136",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "test_wxm-sg-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef6d47b39c943029",
            "tags": {
              "Name": "test_wxm-web"
            },
            "tags_all": {
              "Name": "test_wxm-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0742d8e7f7e326db6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "747082607185",
            "id": "i-0e536270d9127554b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_key_pair.test_wxm_web_key",
            "aws_route_table.test_wxm_public_rt",
            "aws_route_table_association.test_wxm_public_assoc",
            "aws_security_group.test_wxm_sg_web",
            "aws_subnet.test_wxm_subnets",
            "data.aws_internet_gateway.test_wxm_existing_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "test_wxm_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:network-acl/acl-03363b87dd384cc50",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 230,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 210,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 53,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 221,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 53,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 220,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "id": "acl-03363b87dd384cc50",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 130,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 121,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "747082607185",
            "region": "eu-west-3",
            "subnet_ids": [
              "subnet-0ef6d47b39c943029"
            ],
            "tags": {
              "Name": "test_wxm-nacl"
            },
            "tags_all": {
              "Name": "test_wxm-nacl"
            },
            "vpc_id": "vpc-0ebcdb39f7a526ef9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.test_wxm_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_wxm_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:route-table/rtb-0eb4d6e49f0971abc",
            "id": "rtb-0eb4d6e49f0971abc",
            "owner_id": "747082607185",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d61463409eb8f84",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_wxm-public-rt"
            },
            "tags_all": {
              "Name": "test_wxm-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebcdb39f7a526ef9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "747082607185",
            "id": "rtb-0eb4d6e49f0971abc",
            "region": "eu-west-3"
          },
          "dependencies": [
            "data.aws_internet_gateway.test_wxm_existing_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_wxm_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f75e6f0a1370c811",
            "region": "eu-west-3",
            "route_table_id": "rtb-0eb4d6e49f0971abc",
            "subnet_id": "subnet-0ef6d47b39c943029"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "747082607185",
            "id": "rtbassoc-0f75e6f0a1370c811",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_route_table.test_wxm_public_rt",
            "aws_subnet.test_wxm_subnets",
            "data.aws_internet_gateway.test_wxm_existing_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_wxm_sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:security-group/sg-042d0321c7c8b25e3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-042d0321c7c8b25e3",
            "ingress": [],
            "name": "test_wxm-sg",
            "name_prefix": "",
            "owner_id": "747082607185",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_wxm-sg"
            },
            "tags_all": {
              "Name": "test_wxm-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebcdb39f7a526ef9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "747082607185",
            "id": "sg-042d0321c7c8b25e3",
            "region": "eu-west-3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_wxm_sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:security-group/sg-0742d8e7f7e326db6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0742d8e7f7e326db6",
            "ingress": [],
            "name": "test_wxm-sg-web",
            "name_prefix": "",
            "owner_id": "747082607185",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_wxm-sg-web"
            },
            "tags_all": {
              "Name": "test_wxm-sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebcdb39f7a526ef9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "747082607185",
            "id": "sg-0742d8e7f7e326db6",
            "region": "eu-west-3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test_wxm_bastion_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1883720510",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-west-3",
            "security_group_id": "sg-042d0321c7c8b25e3",
            "security_group_rule_id": "sgr-09b928f4c262a79e0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.test_wxm_sg_bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test_wxm_bastion_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1888330585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-3",
            "security_group_id": "sg-042d0321c7c8b25e3",
            "security_group_rule_id": "sgr-0e4b2b4ec5a42abd4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.test_wxm_sg_bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test_wxm_web_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2917234620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-west-3",
            "security_group_id": "sg-0742d8e7f7e326db6",
            "security_group_rule_id": "sgr-00de025df3159643e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.test_wxm_sg_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test_wxm_web_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-117111414",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-3",
            "security_group_id": "sg-0742d8e7f7e326db6",
            "security_group_rule_id": "sgr-07edbbfda9021dac5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.test_wxm_sg_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test_wxm_web_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2184094074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-3",
            "security_group_id": "sg-0742d8e7f7e326db6",
            "security_group_rule_id": "sgr-0d4cd2a4a31c2e1ce",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.test_wxm_sg_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test_wxm_web_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2962175904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-3",
            "security_group_id": "sg-0742d8e7f7e326db6",
            "security_group_rule_id": "sgr-065265ae59b99a1c3",
            "self": false,
            "source_security_group_id": "sg-042d0321c7c8b25e3",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.test_wxm_sg_bastion",
            "aws_security_group.test_wxm_sg_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_wxm_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:subnet/subnet-092cdea40eeb80a74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092cdea40eeb80a74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "747082607185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "test_wxm-subnet-private"
            },
            "tags_all": {
              "Name": "test_wxm-subnet-private"
            },
            "vpc_id": "vpc-0ebcdb39f7a526ef9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "747082607185",
            "id": "subnet-092cdea40eeb80a74",
            "region": "eu-west-3"
          }
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747082607185:subnet/subnet-0ef6d47b39c943029",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef6d47b39c943029",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "747082607185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "test_wxm-subnet-public"
            },
            "tags_all": {
              "Name": "test_wxm-subnet-public"
            },
            "vpc_id": "vpc-0ebcdb39f7a526ef9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "747082607185",
            "id": "subnet-0ef6d47b39c943029",
            "region": "eu-west-3"
          }
        }
      ]
    }
  ]
}